--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,13 +10,115 @@ html, body {
 	margin: auto;
 }
 
-.container > .content {
+header {
+	height: 90px;
 	width: 100%;
-	height: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	margin-bottom: 30px;
 }
 
-.container > .content > .box {
+header > .header-logo {
+	display: flex;
+	align-items: flex-end;
+	
+}
+
+header > .header-logo > .header-logo-home {
+	font-size: 50px;
+	font-weight: 700;
+	letter-spacing: -4px;
+	line-height: 100%;
+	margin-right: 4px;
+}
+
+header > .header-logo > .header-logo-page {
+	font-size: 25px;
+	font-weight: 500;
+	line-height: 100%;
+}
+
+header > .header-nav {
+		
+}
+
+
+.container > .content {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.container > .content > .user-box {
 	width: 280px;
 }
+
+.container > .content > .create-post {
+	width: 1000px;
+	height: 700px;
+	margin-top: 30px;
+}
+
+.container > .content > .create-post > .post-title {
+	margin-bottom: 10px;
+	border-bottom: solid 1.5px gray;
+}
+
+.container > .content > .create-post > .post-content {
+	border-bottom: solid 1.5px gray;
+}
+
+.container > .content > .create-post > .post-upload {
+	height: 60px;
+	display: flex;
+	justify-content: space-between;
+	
+}
+
+.container > .content > .create-post > .post-upload > .post-upload-files {
+	width: 130px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	
+	border: solid;
+}
+
+.container > .content > .create-post > .post-upload > .post-upload-files > .img-icon {
+	display: inline-block;
+	width: 200px;
+}
+
+.container > .content > .create-post > .post-upload > .post-upload-buttons {
+	width: 160px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
